--- a/Src/EfDbIniPoc.Net5.0/EfDbIniPoc.Net5.0.csproj
+++ b/Src/EfDbIniPoc.Net5.0/EfDbIniPoc.Net5.0.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows8.0</TargetFramework>
     <RootNamespace>EfDbIniPoc.Net5._0</RootNamespace>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
